# NodIM

./: .gitignore  .prettierignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  postcss.config.js  rspack.config.ts  tailwind.config.js  tailwind.js  tsconfig.json
docs/: DATA.md  P2P实现检查清单.md  P2P文件传输完整指南.md  P2P集成指南.md  init.md  test.html  upload-keystore.jks  upload-keystore.jks.old  创建插件案例.md  前端微内核插件系统文档.md  图标.md
docs/androidConfig/: build.gradle.kts
src/: App.vue  env-d.ts  global-properties.d.ts  main.ts  router.ts  shims-vue.d.ts  style.css
src-tauri/: Cargo.toml  Info.ios.plist  README.md  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/examples/: chat.rs  cli.rs
src-tauri/src/: commands.rs  lib.rs  lib.rs.bak  libp2p_node.rs  main.rs  main.rs.bak
src-tauri/src/commands/: mod.rs  test.rs
src-tauri/src/components/: mod.rs
src-tauri/src/components/angent/: mod.rs
src-tauri/src/components/net/: swarm.rs
src-tauri/src/core/: app.rs  event.rs  mod.rs  plugin.rs
src-tauri/src/p2p/: behaviour.rs  codec.rs  config.rs  error.rs  event.rs  mod.rs  node.rs  swarm.rs  transport.rs
src-tauri/src/plugins/message/: mod.rs
src-tauri/src/plugins/settings/: mod.rs
src-tauri/src/tests/: chat.rs
src-tauri/src/utils/: auth.rs
src/assets/: base.css
src/components/: Chat.vue
src/layout/: ChatLayout.vue
src/layouts/: BasicLayout copy.vue  BasicLayout.vue
src/p2p/: index.ts  p2p-request.ts  types.ts
src/public/: index.html
src/utils/: fileStorageDB.ts  preprocessing.ts  theme.ts  tools.ts
(+71 files in other folders)
