[package]
name = "nodim"
version = "0.1.0"
description = "IM"
authors = ["charmgo"]
license = ""
repository = ""
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "nodim"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
# 核心依赖
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"
rand = "0.8"
base64 = "0.21"
futures = "0.3"
bytes = "1"
once_cell = "1.19"
lazy_static = "1.4"

# Tauri
tauri = { version = "2.0", features = [] }
tauri-build = "2.0"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
log = "0.4"

async-trait = "0.1.83"

libp2p = { version = "0.52.4", features = [
    "tcp",           # TCP 传输
    "tokio",         # 异步运行时
    "yamux",         # 流多路复用
    "noise",         # 加密
    "dns",           # DNS 解析
    "ping",          # 心跳检测
    "request-response",  # 请求-响应协议
    "gossipsub",
    "mdns",
    "macros", 
] }

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[profile.dev]
incremental = true # 以较小的步骤编译您的二进制文件。

[profile.release]
codegen-units = 1 # 允许 LLVM 执行更好的优化。
lto = true        # 启用链接时优化。
opt-level = "s"   # 优先考虑小的二进制文件大小。如果您更喜欢速度，请使用 `3`。
panic = "abort"   # 通过禁用 panic 处理程序来提高性能。
strip = true      # 确保移除调试符号。
